[package]
name = "sounding-validate"
version = "0.9.1"
authors = ["Ryan Leach <clumsycodemonkey@gmail.com>"]
description = """Validation of soundings from the sounding-base crate."""
repository = "https://github.com/rnleach/sounding-validate.git"
readme = "README.md"
license-file = "LICENSE"
exclude = ["**/*.rs.bk",".gitignore",".vscode/**/*"]
categories = ["science"]
keywords = ["weather","sounding","meteorology", "skew-t"]
edition="2018"

[dependencies]
metfor = "0.6.0"
optional = "0.5.0"
sounding-base = "^0.9.2"
